[package]
name = "advent2015rust"
version = "0.1.0"
authors = ["Joe Horne <joeh19@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
regex = "1"
permute = "0.1.0"
petgraph = "0.5.1"
serde_json = "1.0.59"
derive_more = "0.7.1"
